extends VBoxContainer

@onready var master_volume_button := %MasterVolumeIcon
@onready var master_volume_slider := %MasterVolumeSlider
@onready var music_volume_button := %MusicVolumeIcon
@onready var music_volume_slider := %MusicVolumeSlider
@onready var sound_volume_icon := %SoundVolumeIcon
@onready var sound_volume_slider := %SoundVolumeSlider
